--- a/Global_South_fall.Rmd
+++ b/Global_South_fall.Rmd
@@ -42,7 +42,7 @@ cnlp_init_spacy()
 
 Step 1 is to import the corpus that I previouslly annotated of every UNGA speech. That was using corpusmaker.r. I store it on my desktop, and a version can also be found on UChicago box. 
 
-```{r cache = TRUE}
+```{r cache = TRUE, cache.lazy = FALSE}
 annotated_imported_speeches <- read_tsv("../../../../../Desktop/full_un_corpus_annotated.tsv") %>%
   filter(!str_detect(word, "^[0-9]*$")) %>%
   filter(!upos == "PUNCT" & !upos == "SPACE") %>%
@@ -94,17 +94,23 @@ local_sentences_with_keyword <- function(df, keyword) {
 # Builds a function that counts how far apart two words are.
 # the df will almost allways be all_words_only
 distance_between_words <- function(df, keyword) {
-  #begin Old sentences_with_keyword
-  # This grabs all sentences with the keyword. It produces duplicates if the keyword appears multiple times. Those are removed later on. 
-  df_of_location_sentences_with_keyword <- df %>% 
-    filter(lemma == keyword) %>% 
-    select(id, sid) %>% 
+  sentence_length_of_all_sentences <- df %>%
+    group_by(id, sid) %>%
+    filter(row_number(tid) == n()) %>%
+    select(id, sid, slength = tid)
+  
+  # This grabs all sentences with the keyword. It produces duplicates if the keyword appears multiple times. Those are removed later on.
+  df_of_location_sentences_with_keyword <- df %>%
+    filter(lemma == keyword) %>%
+    select(id, sid) %>%
     mutate(sentence_number = row_number()) %>%
-    unite(cat, c(id, sid), remove = FALSE) %>% 
-    mutate(is_duplicate = duplicated(cat)) %>% 
-    mutate(is_duplicate = if_else(is_duplicate == TRUE, TRUE, duplicated(cat, fromLast = TRUE)))
-  df_of_all_sentences_with_keyword <- inner_join(df, df_of_location_sentences_with_keyword) %>% select(id, sid, cat, tid, word, lemma, sentence_number, is_duplicate)
-  # Begin distance_between_words
+    unite(cat, c(id, sid), remove = FALSE) %>%
+    mutate(is_duplicate = duplicated(cat)) %>%
+    mutate(is_duplicate = if_else(is_duplicate == TRUE, TRUE, duplicated(cat, fromLast = TRUE))) %>%
+    left_join(sentence_length_of_all_sentences)
+  
+  df_of_all_sentences_with_keyword <- inner_join(df, df_of_location_sentences_with_keyword) %>% select(id, sid, cat, tid, slength, word, lemma, sentence_number, is_duplicate)
+  # # Begin distance_between_words
   sentences_containing_keyword <- df_of_all_sentences_with_keyword
   
   location_of_keywords_in_each_sentence <- sentences_containing_keyword %>%
@@ -116,7 +122,8 @@ distance_between_words <- function(df, keyword) {
     mutate(distance_between_word_and_keyword = abs(keyword_row_number - tid)) %>%
     mutate(compare_value = if_else(is_duplicate, lead(distance_between_word_and_keyword), 0)) %>%
     distinct(cat, .keep_all = TRUE) %>%
-    mutate(distance_between_word_and_keyword = if_else(is_duplicate, pmin(distance_between_word_and_keyword, compare_value), distance_between_word_and_keyword))
+    mutate(distance_between_word_and_keyword = if_else(is_duplicate, pmin(distance_between_word_and_keyword, compare_value), distance_between_word_and_keyword)) %>%
+    mutate(distance_from_keyword_percent = distance_between_word_and_keyword/slength)
   return(export)
 }
 ```
@@ -133,7 +140,7 @@ and any relevant derivatives of them. Those are words that I tagged when they ap
 
 ```{r}
 distance_between_govern_other_words <- distance_between_words(all_words_only_1970, "govern") %>%
-  select(id, sid, word, lemma, length_of_sentence, distance_from_keyword, distance_from_keyword_percent) %>%
+  select(id, sid, word, lemma, slength, distance_between_word_and_keyword, distance_from_keyword_percent) %>%
   anti_join(stop_words) %>%
   group_by(lemma) %>%
   summarise(count = n(), mean(distance_from_keyword_percent)) %>%
@@ -157,7 +164,7 @@ kable(distance_between_govern_other_words %>% slice(1:15))
 
 ```{r}
 distance_between_secure_other_words <- distance_between_words(all_words_only_1970, "secure") %>%
-  select(id, sid, word, lemma, length_of_sentence, distance_from_keyword, distance_from_keyword_percent) %>%
+  select(id, sid, word, lemma, slength, distance_between_word_and_keyword, distance_from_keyword_percent) %>%
   anti_join(stop_words) %>%
   group_by(lemma) %>%
   summarise(count = n(), mean(distance_from_keyword_percent)) %>%
@@ -176,7 +183,7 @@ kable(distance_between_secure_other_words %>% slice(1:15))
 
 ```{r}
 distance_between_develop_other_words <- distance_between_words(all_words_only_1970, "develop") %>%
-  select(id, sid, word, lemma, length_of_sentence, distance_from_keyword, distance_from_keyword_percent) %>%
+  select(id, sid, word, lemma, slength, distance_between_word_and_keyword, distance_from_keyword_percent) %>%
   anti_join(stop_words) %>%
   group_by(lemma) %>%
   summarise(count = n(), mean(distance_from_keyword_percent)) %>%
@@ -184,7 +191,7 @@ distance_between_develop_other_words <- distance_between_words(all_words_only_19
   arrange(-count) %>%
   filter(lemma != "develop")
 
-fggplot(distance_between_develop_other_words, mapping = aes(`count`, `mean(distance_from_keyword_percent)`)) +
+ggplot(distance_between_develop_other_words, mapping = aes(`count`, `mean(distance_from_keyword_percent)`)) +
   geom_point() +
   labs(x = "Number of Mentions of Word", y = "Average Distance from Keyword", title = "Relative distance from relative keyword (Develop) versus mentions")
 
@@ -208,7 +215,7 @@ Now lets look at develop and compare it to 1970s stuff. Especially in the contex
 
 ```{r}
 distance_between_develop_other_words_2k <- distance_between_words(all_words_only_2k, "develop") %>%
-  select(id, sid, word, lemma, length_of_sentence, distance_from_keyword, distance_from_keyword_percent) %>%
+  select(id, sid, word, lemma, slength, distance_between_word_and_keyword, distance_from_keyword_percent) %>%
   anti_join(stop_words) %>%
   group_by(lemma) %>%
   summarise(count = n(), mean(distance_from_keyword_percent)) %>%
@@ -287,27 +294,15 @@ printer_producer <- function(dataframe) {
     arrange(-desc(Year))
   data <- list()
   for (i in seq(as.double(min(dataframe$Year)), as.double(max(dataframe$Year)))) {
-    data <- bind_cols(data, dataframe %>% filter(Year == i) %>% add_column(NA))
+    data <- bind_cols(data, dataframe %>% filter(Year == i))
   }
   return(data)
 }
 ```
 
-TFIDF of the most unique words said at the UN ever. This is not insightful. 
+## TFIDF for stuff related to govern. 
 
-```{r}
-seperate_tfidf <- left_join(all_words_only %>% count(id, lemma), all_words_only %>% count(id, lemma) %>% group_by(id) %>% summarize(`words in speech` = sum(n)))
-
-full_tfidf <- seperate_tfidf %>%
-  bind_tf_idf(lemma, id, n) %>%
-  filter(lemma %in% country_filter == FALSE) %>%
-  arrange(desc(tf_idf)) %>%
-  filter(tf_idf > 0.005)
-
-full_tfidf
-```
-
-TFIDF for stuff related to govern. 
+Single sentence.
 
 ```{r}
 # note that this produces an unstemmed all_words_only. 
@@ -327,13 +322,35 @@ govern_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_senten
 govern_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 1990, 9) %>% select(-Year, -Session, -Country))
 govern_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 2000, 9) %>% select(-Year, -Session, -Country))
 govern_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_govern, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(govern_1970s), printer_producer(govern_1980s), printer_producer(govern_1990s), printer_producer(govern_2000s), printer_producer(govern_2010s)))
 ```
+
+Local Sentences included. 
 
 ```{r}
 local_sentences_mention_govern <- local_sentences_with_keyword(all_words_only, "govern")
+
+num_words_insentences_locally_mentioning_govern <- local_sentences_mention_govern %>% 
+  count(id, lemma) %>% 
+  group_by(id) %>%
+  summarize(`words in speech` = sum(n))
+
+mentions_of_aux_words_in_localsentences_containing_govern <- left_join(local_sentences_mention_govern %>% count(id, lemma), num_words_insentences_locally_mentioning_govern) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
+
+extended_govern_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_govern, 1970, 9) %>% select(-Year, -Session, -Country))
+extended_govern_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_govern, 1980, 9) %>% select(-Year, -Session, -Country))
+extended_govern_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_govern, 1990, 9) %>% select(-Year, -Session, -Country))
+extended_govern_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_govern, 2000, 9) %>% select(-Year, -Session, -Country))
+extended_govern_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_govern, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(extended_govern_1970s), printer_producer(extended_govern_1980s), printer_producer(extended_govern_1990s), printer_producer(extended_govern_2000s), printer_producer(extended_govern_2010s)))
 ```
 
-TFIDF for stuff related to Develop
+## TFIDF for stuff related to Develop
+
+Single sentence. 
 
 ```{r}
 # note that this produces an unstemmed all_words_only. 
@@ -351,9 +368,35 @@ develop_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sente
 develop_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 1990, 9) %>% select(-Year, -Session, -Country))
 develop_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 2000, 9) %>% select(-Year, -Session, -Country))
 develop_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_develop, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(develop_1970s %>% filter(lemma != "lucia")), printer_producer(develop_1980s), printer_producer(develop_1990s), printer_producer(develop_2000s),printer_producer(develop_2010s)))
 ```
 
-TFIDF for stuff related to Rights
+Local sentences included. 
+
+```{r}
+local_sentences_mention_develop <- local_sentences_with_keyword(all_words_only, "develop")
+
+num_words_insentences_locally_mentioning_develop <- local_sentences_mention_develop %>% 
+  count(id, lemma) %>% 
+  group_by(id) %>%
+  summarize(`words in speech` = sum(n))
+
+mentions_of_aux_words_in_localsentences_containing_develop <- left_join(local_sentences_mention_develop %>% count(id, lemma), num_words_insentences_locally_mentioning_develop) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
+
+extended_develop_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_develop, 1970, 9) %>% select(-Year, -Session, -Country))
+extended_develop_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_develop, 1980, 9) %>% select(-Year, -Session, -Country))
+extended_develop_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_develop, 1990, 9) %>% select(-Year, -Session, -Country))
+extended_develop_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_develop, 2000, 9) %>% select(-Year, -Session, -Country))
+extended_develop_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_develop, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(extended_develop_1970s), printer_producer(extended_develop_1980s), printer_producer(extended_develop_1990s), printer_producer(extended_develop_2000s), printer_producer(extended_develop_2010s)))
+```
+
+## TFIDF for stuff related to Rights
+
+Single sentence. 
 
 ```{r}
 # "rights" gets lemma'ed to "right"
@@ -372,19 +415,117 @@ right_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentenc
 right_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 1990, 9) %>% select(-Year, -Session, -Country))
 right_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 2000, 9) %>% select(-Year, -Session, -Country))
 right_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_right, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(right_1970s), printer_producer(right_1980s), printer_producer(right_1990s), printer_producer(right_2000s),printer_producer(right_2010s)))
 ```
+
+Local sentences included. 
+
+```{r}
+local_sentences_mention_right <- local_sentences_with_keyword(all_words_only %>% mutate(lemma = if_else(lemma == "rights", "right", lemma)), "right")
+
+num_words_insentences_locally_mentioning_right <- local_sentences_mention_right %>% 
+  count(id, lemma) %>% 
+  group_by(id) %>%
+  summarize(`words in speech` = sum(n))
+
+mentions_of_aux_words_in_localsentences_containing_right <- left_join(local_sentences_mention_right %>% count(id, lemma), num_words_insentences_locally_mentioning_right) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
+
+extended_right_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_right, 1970, 9) %>% select(-Year, -Session, -Country))
+extended_right_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_right, 1980, 9) %>% select(-Year, -Session, -Country))
+extended_right_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_right, 1990, 9) %>% select(-Year, -Session, -Country))
+extended_right_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_right, 2000, 9) %>% select(-Year, -Session, -Country))
+extended_right_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_right, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(extended_right_1970s), printer_producer(extended_right_1980s), printer_producer(extended_right_1990s), printer_producer(extended_right_2000s), printer_producer(extended_right_2010s)))
+```
+
+## TFIDF for stuff related to capability
+
+Relevant Words:
+
+* capability, mentioned 1674 times
+* capable, mentioned 1933 times
+* capacity, mentioned 5748 times
+* ability, mentioned 3239 times. I do not include this in my calculation however. 
+
+in comparison:
+
+* right, mentioned 48186 times
+* develop, mentioned 113759 times
+* govern, 47939
+
+I found this out by running the following code with view around it and without slice. I found the counts of words using the command f function. 
+
+```{r}
+all_words_only %>% count(lemma) %>% arrange(desc(n)) %>% anti_join(stop_words, by = c("lemma" = "word")) %>% slice(1:10)
+```
+
+To check in the future. Look at these for just one sentence. Lemmas
+
+* responsibility, mentions 14k 
+* dialogue, 11k
+* **sustainable	, 11k**
+* **solidarity, 8k**
+* **resilience + resilient + resiliency combined.** 
+
+Single sentence. 
+
+```{r}
+sentences_mention_capability <- sentences_with_keyword(all_words_only %>% mutate(lemma = if_else(lemma == "capable", "capability", lemma)) %>% mutate(lemma = if_else(lemma == "capacity", "capability", lemma)), "capability")
+num_words_in_each_speech_mentioning_capability <- sentences_mention_capability %>%  
+  count(id, lemma) %>% 
+  group_by(id) %>% 
+  summarize(`words in speech` = sum(n))
+
+mentions_of_aux_words_in_sentences_containing_capability <- left_join(sentences_mention_capability %>% count(id, lemma), num_words_in_each_speech_mentioning_capability) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
+
+capability_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_capability, 1970, 9) %>% select(-Year, -Session, -Country))
+capability_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_capability, 1980, 9) %>% select(-Year, -Session, -Country))
+capability_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_capability, 1990, 9) %>% select(-Year, -Session, -Country))
+capability_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_capability, 2000, 9) %>% select(-Year, -Session, -Country))
+capability_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_sentences_containing_capability, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(capability_1970s), printer_producer(capability_1980s), printer_producer(capability_1990s), printer_producer(capability_2000s),printer_producer(capability_2010s)))
+```
+
+Local sentences included. 
+
+```{r}
+local_sentences_mention_capability <- local_sentences_with_keyword(all_words_only %>% mutate(lemma = if_else(lemma == "capable", "capability", lemma)) %>% mutate(lemma = if_else(lemma == "capacity", "capability", lemma)), "capability")
+
+num_words_insentences_locally_mentioning_capability <- local_sentences_mention_capability %>% 
+  count(id, lemma) %>% 
+  group_by(id) %>%
+  summarize(`words in speech` = sum(n))
+
+mentions_of_aux_words_in_localsentences_containing_capability <- left_join(local_sentences_mention_capability %>% count(id, lemma), num_words_insentences_locally_mentioning_capability) %>%
+  separate(id, c("Country", "Session", "Year"), remove = FALSE)
+
+extended_capability_1970s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_capability, 1970, 9) %>% select(-Year, -Session, -Country))
+extended_capability_1980s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_capability, 1980, 9) %>% select(-Year, -Session, -Country))
+extended_capability_1990s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_capability, 1990, 9) %>% select(-Year, -Session, -Country))
+extended_capability_2000s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_capability, 2000, 9) %>% select(-Year, -Session, -Country))
+extended_capability_2010s <- tfidf_aux_word_organizer(tfidfer(mentions_of_aux_words_in_localsentences_containing_capability, 2010, 9) %>% select(-Year, -Session, -Country))
+
+#View(bind_rows(printer_producer(extended_capability_1970s), printer_producer(extended_capability_1980s), printer_producer(extended_capability_1990s), printer_producer(extended_capability_2000s), printer_producer(extended_capability_2010s)))
+```
+
+Feb 5 2020
+We need to think about extra sentences as going farther out in terms of accuracy of the valance key words. Single sentence gives us the core language surrounding the keyword. If you were to argue the greater sentences, you'd argue that they are less convincing but still substantive. 
+
+
+Govern, capability are working
+capability is the only one that had really useful insight on extra sentences. 
+
+Development is working alright in showing a difference. 
+
+Rights didnt work well for us period. It's not helpful.
+
+The single sentence was fundamental and core. The extended sentences will function as a helper context. 
 
 
 rerun the big chunk above for rights and capibailities
 adjust the words from funciton to look at sentence before and after especially for govern_1970s
-
-TO DO TOMORROW
-apply before and after sentences and see what emerges for govern especially
-do capibalities to get a vocab cluster
-do rights to find out specifically what rights
-do part of speech tagging. 
-
-
-Do this but only for nouns. + verbs + adjs in 1970 and 2000s. Do it for these three words for a total of 18 tables. 1970s and 2000s, nouns verbs adjs for * Govern-
-* Develop-
-* Secur-
